--- a/index.html
+++ b/index.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="./src/style/style.css">
     <title>Page Iphone</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navegation">
+            <a href="#">
+                <img src="./img/logo.png" class="logo" alt="logo iphone">
+            </a>
+            <ul>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">Ipad</a></li>
+                <li><a href="#" class="check">iPhone</a></li>
+                <li><a href="#">Watch</a></li>
+                <li><a href="#">AirPods</a></li>
+                <li><a href="#">Só na Aplle</a></li>
+                <li><a href="#">Meu GitHub</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <div class="main-text">
+                <img src="./img/iphone13.png" alt="">
+                <h3>Seu novo superpoder.</h3>
+                <p>Chip com a velocidade impressionante.Um aumento notável na duração da bateria . <br> No iPhone , você faz coisas que  nunca pode.E ele ainda vem em dois tamanhos.</p>
+                <h6>Apartir de 600.000 KZ</h6>
+                <a href="#" class="btn">Comprar</a>
+                <div class="text">
+                <h5>Escolha a sua cor favorita:</h5>
+                </div>
+                <div class="content">
+                    <span id="green"></span >
+                    <span id="pink"></span >
+                    <span id="blue"></span >
+                    <span id="black"></span >
+                    <span id="white"></span >
+                    <span id="red"></span >
+                </div>
+            </div>
+            <div class="main-img">
+                <img src="./img/green.png" alt="Imagem do Iphone" id="iphone">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
