--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <main>
         <section>
+            <div class="circle"></div>
             <div class="main-text">
                 <img src="./img/iphone13.png" alt="">
                 <h3>Seu novo superpoder.</h3>
@@ -47,9 +48,11 @@
                 </div>
             </div>
             <div class="main-img">
-                <img src="./img/green.png" alt="Imagem do Iphone" id="iphone">
+                <img src="./img/green.png" alt="Imagem do Iphone" id="phone">
             </div>
         </section>
     </main>
+
+    <script src="./src/app/app.js"></script>
 </body>
 </html>
