--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Watch</a></li>
                 <li><a href="#">AirPods</a></li>
                 <li><a href="#">Só na Aplle</a></li>
-                <li><a href="#">Meu GitHub</a></li>
+                <li><a href="https://github.com/franciscojoaopedro" target="_blank">Meu GitHub</a></li>
             </ul>
         </nav>
     </header>
