--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
             <div class="circle"></div>
             <div class="main-text">
                 <img src="./img/iphone13.png" alt="">
-                <h3>Seu novo superpoder.</h3>
-                <p>Chip com a velocidade impressionante.Um aumento notável na duração da bateria . <br> No iPhone , você faz coisas que  nunca pode.E ele ainda vem em dois tamanhos.</p>
-                <h6>Apartir de 600.000 KZ</h6>
-                <a href="#" class="btn">Comprar</a>
-                <div class="text">
-                <h5>Escolha a sua cor favorita:</h5>
+                <div class="box">
+                    <h3>Apple iPhone 13</h3>
+                    <p>O Apple iPhone 13 é um smartphone iOS com características inovadoras que o tornam uma excelente opção para qualquer tipo de utilização.A tela de 6.1 polegadas coloca esse Apple no topo de sua categoria. A resolução também é alta: 2532x1170 pixel. </p>
+                    <h6>Apartir de 600.000 KZ</h6>
+                    <a href="#" class="btn">Comprar</a>
+                    <div class="text">
+                    <h5>Escolha a sua cor favorita:</h5>
+                    </div>
+                    <div class="content">
+                        <span id="green"></span >
+                        <span id="pink"></span >
+                        <span id="blue"></span >
+                        <span id="black"></span >
+                        <span id="white"></span >
+                        <span id="red"></span >
+                    </div>
                 </div>
-                <div class="content">
-                    <span id="green"></span >
-                    <span id="pink"></span >
-                    <span id="blue"></span >
-                    <span id="black"></span >
-                    <span id="white"></span >
-                    <span id="red"></span >
-                </div>
+
             </div>
             <div class="main-img">
                 <img src="./img/green.png" alt="Imagem do Iphone" id="phone">
