--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet"  href="./src/style/style.css">
     <title>Page Iphone</title>
 </head>
 <body>
@@ -28,13 +28,12 @@
 
     <main>
         <section>
-            <div class="circle"></div>
             <div class="main-text">
-                <img src="./img/iphone13.png" alt="">
+              
                 <div class="box">
                     <h3>Apple iPhone 13</h3>
                     <p>O Apple iPhone 13 é um smartphone iOS com características inovadoras que o tornam uma excelente opção para qualquer tipo de utilização.A tela de 6.1 polegadas coloca esse Apple no topo de sua categoria. A resolução também é alta: 2532x1170 pixel. </p>
-                    <h6>Apartir de 600.000 KZ</h6>
+                    <h6>Apartir de 600.000 Kwanzas</h6>
                     <a href="#" class="btn">Comprar</a>
                     <div class="text">
                     <h5>Escolha a sua cor favorita:</h5>
