add button carrinho

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                     <h3>Apple iPhone 13</h3>
                     <p>O Apple iPhone 13 é um smartphone iOS com características inovadoras que o tornam uma excelente opção para qualquer tipo de utilização.A tela de 6.1 polegadas coloca esse Apple no topo de sua categoria. A resolução também é alta: 2532x1170 pixel. </p>
                     <h6>Apartir de 600.000 Kwanzas</h6>
-                    <a href="#" class="btn">Comprar</a>
+                    <div class="btn-all">
+                        <a href="#" class="btn">Comprar</a>
+                        <a href="#" class="btn">Adicionar no carrinho</a>
+
+                    </div>
                     <div class="text">
                     <h5>Escolha a sua cor favorita:</h5>
                     </div>
