--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body>
     <header>
         <nav class="navegation">
-            <a href="#">
-                <img src="./img/logo.png" class="logo" alt="logo iphone">
-            </a>
-            <ul>
-                <li><a href="#">Mac</a></li>
-                <li><a href="#">Ipad</a></li>
-                <li><a href="#" class="check">iPhone</a></li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">AirPods</a></li>
-                <li><a href="#">Só na Aplle</a></li>
-                <li><a href="https://github.com/franciscojoaopedro" target="_blank">Meu GitHub</a></li>
-            </ul>
+            <div>
+                <a href="#">
+                    <img src="./img/logo.png" class="logo" alt="logo iphone">
+                </a>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="#">Mac</a></li>
+                    <li><a href="#">iPad</a></li>
+                    <li><a href="#" class="check">iPhone</a></li>
+                    <li><a href="#">Watch</a></li>
+                    <li><a href="#">AirPods</a></li>
+                    <li><a href="#">Github</a></li>
+                    <li><a href="https://github.com/franciscojoaopedro" target="_blank">Meu GitHub</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
@@ -33,10 +37,10 @@
                 <div class="box">
                     <h3>Apple iPhone 13</h3>
                     <p>O Apple iPhone 13 é um smartphone iOS com características inovadoras que o tornam uma excelente opção para qualquer tipo de utilização.A tela de 6.1 polegadas coloca esse Apple no topo de sua categoria. A resolução também é alta: 2532x1170 pixel. </p>
-                    <h6>Apartir de 600.000 Kwanzas</h6>
+                    <h6><strong>Preço: </strong>600.000 Kwanzas</h6>
                     <div class="btn-all">
                         <a href="#" class="btn">Comprar</a>
-                        <a href="#" class="btn">Adicionar no carrinho</a>
+                        <a href="#" class="btn carrinho">Carrinho</a>
 
                     </div>
                     <div class="text">
